fix(Viewer): On mobile, background and color are now theme responsive

--- a/react/Viewer/styles.styl
+++ b/react/Viewer/styles.styl
@@ -18,5 +18,5 @@
         padding-bottom var(--flagship-bottom-height)
 
     +medium-screen()
-        color var(--charcoalGrey)
-        background var(--white)
+        color var(--primaryTextColor)
+        background var(--paperBackgroundColor)
